--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <meta name="apple-mobile-web-app-capable" content="yes" /> <!-- apple devices fullscreen -->
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <body>
-    <header>sdfsdf</header>
+    <header>sdfsdfsdfsdf</header>
   </body>
 </html>
