--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        
+        <title>FIL 公募活动</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="referrer" content="always">
@@ -15,6 +15,24 @@
 <meta name="apple-mobile-web-app-capable" content="yes" /> <!-- apple devices fullscreen -->
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <body>
-    <header>sdfsdfsdfsdf</header>
+    <header>FIL 公募活动</header>
+    <div>
+        <dl>
+            <dt>参与活动规则</dt>
+            <dt>直推1人奖励：０．１FIL</dt>
+            <dt>注册奖励：０．１FIL</dt>
+            <dt>直推获取10%FIL佣金</dt>
+            <dt>公募１ETH=50FIL</dt>
+            <dt>参与公募所获取的奖励在上线一周内结算</dt>
+        </dl>  
+    </div>
+      <div>
+          <h2>充值地址</h2>
+      </div>
+         <div>
+             <botton>官网</botton>
+             <botton>开源代码</botton>
+             <botton>参与</botton>
+      </div>
   </body>
 </html>
