--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div>
         <dl>
             <dt>参与活动规则</dt>
-            <dt>直推1人奖励：０．１FIL</dt>
-            <dt>注册奖励：０．１FIL</dt>
+            <dt>直推1人奖励：0.1FIL</dt>
+            <dt>注册奖励：0.1FIL</dt>
             <dt>直推获取10%FIL佣金</dt>
             <dt>公募１ETH=50FIL</dt>
             <dt>参与公募所获取的奖励在上线一周内结算</dt>
