--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>FIL 公募活动</header>
     <div>
         <dl>
-            <dt>参与活动规则</dt>
+            <dt>参与活动规则2</dt>
             <dt>直推1人奖励：0.1FIL</dt>
             <dt>注册奖励：0.1FIL</dt>
             <dt>直推获取10%FIL佣金</dt>
