--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <dt>注册奖励：0.1FIL</dt>
             <dt>直推获取10%FIL佣金</dt>
             <dt>公募１ETH=50FIL</dt>
-            <dt>参与公募所获取的奖励在上线一周内结算2</dt>
+            <dt>参与公募所获取的奖励在上线一周内结算</dt>
         </dl>  
     </div>
       <div>
