完成基本界面

--- a/index.html
+++ b/index.html
@@ -14,25 +14,35 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" /> <!-- apple devices fullscreen -->
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <body>
+        <link rel="stylesheet" type="text/css" href="./css/default.css">
+
+    <body>
+    <div id="maincon" style="-webkit-user-select: none;margin: auto;cursor: zoom-out; ">
+    <div class="bg g1"></div>
     <header>FIL 公募活动</header>
-    <div>
+    <div class="card">
+        <h2>参与活动规则</h2>
         <dl>
-            <dt>参与活动规则</dt>
+            <dt>公募:1ETH=50FIL</dt>
             <dt>直推1人奖励：0.1FIL</dt>
             <dt>注册奖励：0.1FIL</dt>
             <dt>直推获取10%FIL佣金</dt>
-            <dt>公募１ETH=50FIL</dt>
             <dt>参与公募所获取的奖励在上线一周内结算</dt>
         </dl>  
     </div>
-      <div>
+      <div class="card">
           <h2>充值地址</h2>
+          <dl>
+              <dt>充值地址：</dt>
+          </dl>
       </div>
-         <div>
-             <botton>官网</botton>
-             <botton>开源代码</botton>
-             <botton>参与</botton>
+        <div class="fixmenu">
+             <button>官网</button>
+             <button>开源代码</button>
+             <button>参与</button>
       </div>
+
+    </div>
+    <div class="bg g2"></div>
   </body>
 </html>
