完成基本界面

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           </dl>
       </div>
         <div class="fixmenu">
-             <button>官网</button>
-             <button>开源代码</button>
+             <button onclick="window.open('https://filecoin.io/')">官网</button>
+             <button onclick="window.open('https://github.com/filecoin-project')">开源代码</button>
              <button>参与</button>
       </div>
 
