完成基本界面

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <body>
     <div id="maincon" style="-webkit-user-select: none;margin: auto;cursor: zoom-out; ">
     <div class="bg g1"></div>
-    <header>FIL 公募活动</header>
     <div class="card">
         <h2>参与活动规则</h2>
         <dl>
@@ -39,10 +38,12 @@
         <div class="fixmenu">
              <button onclick="window.open('https://filecoin.io/')">官网</button>
              <button onclick="window.open('https://github.com/filecoin-project')">开源代码</button>
-             <button>参与</button>
+             <button id="add_button">参与</button>
       </div>
 
     </div>
     <div class="bg g2"></div>
+    <script type="text/javascript" src="//ps.faisys.com/js/comm/jquery/jquery-core.min.js?v=202009021519"></script>
+    <script src="script.js"></script>
   </body>
 </html>
