完成基本界面

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <h2>充值地址</h2>
           <dl>
               <dt>充值地址：</dt>
+              <dt>0x00ffefsscc0x302300203423402000000230000230301c</dt>
           </dl>
       </div>
         <div class="fixmenu">
