完成基本界面

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="maincon" style="-webkit-user-select: none;margin: auto;cursor: zoom-out; ">
     <div class="bg g1"></div>
     <div class="card">
-        <h2>参与活动规则</h2>
+        <h2>参与活动规则(截止日期：2020-09-25)</h2>
         <dl>
             <dt>公募:1ETH=50FIL</dt>
             <dt>直推1人奖励：0.1FIL</dt>
@@ -30,10 +30,10 @@
         </dl>  
     </div>
       <div class="card">
-          <h2>充值地址</h2>
+          <h2>充值地址 <a id="copyaddr" href="javascript:void(0)">复制地址</a></h2>
           <dl>
               <dt>充值地址：</dt>
-              <dt>0x00ffefsscc0x302300203423402000000230000230301c</dt>
+              <dt id="ethaddr">0x00ffefsscc0x302300203423402000000230000230301c</dt>
           </dl>
       </div>
         <div class="fixmenu">
@@ -44,7 +44,9 @@
 
     </div>
     <div class="bg g2"></div>
+
     <script type="text/javascript" src="//ps.faisys.com/js/comm/jquery/jquery-core.min.js?v=202009021519"></script>
+    <script src="http://lib.baomitu.com/clipboard.js/1.7.1/clipboard.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
