--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         <div class="fixmenu">
              <button onclick="window.open('https://filecoin.io/')">官网</button>
              <button onclick="window.open('https://github.com/filecoin-project')">开源代码</button>
-             <button id="add_button">参与</button>
+             <button id="add_button" style="display:block">参与</button>
+             <button id="my_button" style="display: none">我的推荐</button>
       </div>
 
     </div>
+    <div id="tuj_button" style="display: none;">推荐</div>
     <div class="bg g2"></div>
-
+　　
     <script type="text/javascript" src="//ps.faisys.com/js/comm/jquery/jquery-core.min.js?v=202009021519"></script>
     <script src="http://lib.baomitu.com/clipboard.js/1.7.1/clipboard.min.js"></script>
     <script src="script.js"></script>
