--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="bg g2"></div>
 　　
     <script type="text/javascript" src="//ps.faisys.com/js/comm/jquery/jquery-core.min.js?v=202009021519"></script>
-    <script src="http://lib.baomitu.com/clipboard.js/1.7.1/clipboard.min.js"></script>
+    <script src="clipboard.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
