--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="card">
         <h2>参与活动规则(截止日期：2020-09-25)</h2>
         <dl>
-            <dt>公募:1ETH=50FIL</dt>
+            <dt>公募:1ETH=50FIL,充值建议0.1ETH起</dt>
             <dt>直推1人奖励：0.1FIL</dt>
             <dt>注册奖励：0.1FIL</dt>
             <dt>直推获取10%FIL佣金</dt>
